--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,15 @@ part-1.csv
 
 *.ipynb
 
-OutputData
-
 *.ipynb
 
 TEST.json
+
+TestingData
+OutputData/80-15-5.json
+
+OutputData/60-20-20.json
+
+OutputData/45-35-20.json
+
+OutputData/40-30-30.json
